Fix error stack text not wrapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -306,6 +306,7 @@ nav a span {
 
 #error-stack {
   font-size: 0.7rem;
+  word-break: break-all;
 }
 
 /* 
